<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="msg_error_photo">No photo selected</string>
    <string name="msg_succes_ajout">Job added successfully</string>
    <string name="gps_lancer">Geolocation launch please wait...</string>
    <string name="gps_succes">Geolocation successfully complete</string>
    <string name="gps_error">The address could not be determined</string>
    <string name="gps_delai">Time Out</string>
    <string name="liste">Choose Item From List</string>
    <string name="textAddressLable">Address</string>
    <string name="textJobCompletedLableTv">Job Complete</string>
    <string name="textContactLableTv">Contact</string>
    <string name="textDescriptionLable">Description</string>
    <string name="textStartLable">Start</string>
    <string name="textUserName">Username</string>
    <string name="textPassword">Password</string>
    <string name="text_domainSmall">Domain</string>
    <string name="textJobReportLable">Report Template</string>
    <string name="textNoLable">No</string>
    <string name="textComplaintLable">Compliant</string>
    <string name="textNotComplaintLable">Not Compliant</string>
    <string name="textOkLable">OK</string>
    <string name="textYesLable">Yes</string>
    <string name="textJobManagerLableTv">Job Manager</string>
    <string name="textJobPhoneLableTv">Phone</string>
    <string name="ask_synch_msg">Would you like to synchronise your data?</string>
    <string name="textCancelLable">Cancel</string>
    <string name="lundi">Monday</string>
    <string name="mardi">Tuesday</string>
    <string name="mercredi">Wednesday</string>
    <string name="jeudi">Thursday</string>
    <string name="vendredi">Friday</string>
    <string name="samedi">Saturday</string>
    <string name="dimanche">Sunday</string>
    <string name="textRescedule">Reschedule</string>
    <string name="textDecline">Decline</string>
    <string name="replanification">Rescheduling</string>
    <string name="textJobNumberLableTv">Number</string>
    <string name="textDomainInformation">Only fill the subdomain of Synchroteam. For example \"acme\" if your Synchroteam account is \n \"https://acme.synchroteam.com\"</string>
    <string name="textInformationlable">Information</string>
    <string name="textJobCustomerLableTv">Customer</string>
    <string name="textJobTechnicianLableTv">Technician</string>
    <string name="button_wipeAllDetails">Wipe All Data</string>
    <string name="textFinishLableTv">Finished</string>
    <string name="textToastPleaseStartJob">Start Job first</string>
    <string name="textCurrentJobLable">Today\'s Jobs</string>
    <string name="textToComeLable">Upcoming</string>
    <string name="textDedlineExceededLable">Late</string>
    <string name="textReportsLable">Reports</string>
    <string name="textCalanderlable">Calendar</string>
    <string name="textMessagesLable">Messages</string>
    <string name="textLastSyncronization">Last Sync</string>
    <string name="textTrackingLableTvTracking">Tracking</string>
    <string name="textLogout">Logout</string>
    <string name="textSystemOptions">System Options</string>
    <string name="button_login">Login</string>
    <string name="textAveragePriorityTv">Normal</string>
    <string name="textLowPriorityTv">Low</string>
    <string name="textHighPriorityTv">High</string>
    <string name="textAddItem">Add Item</string>
    <string name="textPridocityLableTv">Periodicity(min)</string>
    <string name="textFrequencLableTv">Frequency(m)</string>
    <string name="textDaysOfOperationLableTv">Days of Operation</string>
    <string name="textHoursOfOperationLableTv">Hours of Operation</string>
    <string name="textAllLableTv">All</string>
    <string name="textByDateLableTv">By Date</string>
    <string name="textTabsReports">Report</string>
    <string name="textTabsCatalouge">Invoicing</string>
    <string name="textAttachmentLableTv">Attachments</string>
    <string name="msg_synch_error_3">A new version of Synchroteam.com is available. Please upgrade the application on your Smartphone</string>
    <string name="msg_synch_error_2">You can’t use multiple devices on the same account</string>
    <string name="textEndLableTv">End</string>
    <string name="textAddAttachmentLable">Add Attachment</string>
    <string name="textCustomerSignatureLableTv">Customer Signature</string>
    <string name="textMySignatureLableTv">My Signature</string>
    <string name="textSiteLable">Site</string>
    <string name="textEquipmentLable">Equipment</string>
    <string name="textJobTypeLable">Job Type</string>
    <string name="textAdditionalAddressLable">Additional Address</string>
    <string name="planning">Schedule</string>
    <string name="textStartTimeLable">Start Time</string>
    <string name="textEndTimeLable">End Time</string>
    <string name="textMeetingLable">Meeting</string>
    <string name="msg_date_manquante">Enter date and time for scheduling a job</string>
    <string name="msg_confirm_plannif">You have not input a job date.The request will be sent to a manager for scheduling.</string>
    <string name="msg_saisie_oblig">Complete all Mandatory fields</string>
    <string name="msg_error_description">Please fill the description</string>
    <string name="textNewJobEndConfirmation">Quit without saving?</string>
    <string name="textSyncronizationTv">Synchronization</string>
    <string name="textEnableLocationServiceText">Turn On Location Services to Allow Synchroteam to Determine Your Location.</string>
    <string name="textNewtworkNorAvaliable">No network Coverage, Offline mode.</string>
    <string name="itemsTopBarLable">Items</string>
    <string name="textOkLableNewJob">Create</string>
    <string name="textNewJobLableTv">New Job</string>
    <string name="timeMeeting">Meeting Time</string>
    <string name="textNearestClientNewJob">Nearby Customers</string>
    <string name="textAlertLable">Alert</string>
    <string name="textValueLessThanMinimumValue">Enter more than 10 minutes</string>
    <string name="ok">Set</string>
    <string name="msg_synch_error_4">Only Technicians can Synchronize the mobile App</string>
    <string name="msg_synch_ok">Synchronization ended</string>
    <string name="msg_synch_error">Synchronization failure</string>
    <string name="reset">Reset</string>
    <string name="msg_synch">Synchronization in progress...</string>
    <string name="textDateSmallLable">Date</string>
    <string name="textDateStartDate">Start Date</string>
    <string name="textDateEndDate">End Date</string>
    <string name="msg_chargement">Loading the application...</string>
    <string name="msg_error_login">Username incorrect</string>
    <string name="msg_error_pwd">Password incorrect</string>
    <string name="msg_error_auth">Authentication error</string>
    <string name="intervention">Job</string>
    <string name="naviguer_par">Browse by</string>
    <string name="non_renseigne">Not Verified</string>
    <string name="modifier">Save</string>
    <string name="textSignature">Signature</string>
    <string name="textClear">Clear</string>
    <string name="textCopyIcon">Duplication</string>
    <string name="enterComment">Add Comment</string>
    <string name="textResolved">Resolved</string>
    <string name="texUnavabilitiesLables">Activities</string>
    <string name="textStarted">Started</string>
    <string name="textSuspended">Suspended</string>
    <string name="textScheduled">Scheduled</string>
    <string name="textCompleted">Completed</string>
    <string name="textEnableLocationService">Do you want to activate location services?</string>
    <string name="textEmptyTimeInterval">Empty Time Interval</string>
    <string name="textCharcterTimeInterval">Time Interval should be digit only</string>
    <string name="textJobMobileLableTv">Mobile</string>
    <string name="textHoursOfOperationDataTv">Select Hours</string>
    <string name="textDaysOfOperationDataTv">Configure</string>
    <string name="textLegalInformationLable">Legal Information</string>
    <string name="addQuantity">Enter Quantity</string>
    <string name="textAdditionalInformationTitleBar">Additional Information</string>
    <string name="textSelectTime">Select Time</string>
    <string name="textLableTitleBarWipeAllDetails">Warning</string>
    <string name="textNoJobAvaliable">No Job Available</string>
    <string name="textWaitLable">Wait</string>
    <string name="textClientFetchDialog">Wait while we fetch data from database</string>
    <string name="textClientNotFetchedDialog">Customers does not exist</string>
    <string name="textSiteNotFetchedDialog">Sites Does Not exits</string>
    <string name="textEquipmentNotFetchedDialog">Equipment does not exist</string>
    <string name="textNearestClientNotFetchedDialog">Nearby Customer does not exists</string>
    <string name="textProgressDialogFetchNearestClient">Fetching data</string>
    <string name="textDistanceNearestClient">Distance</string>
    <string name="textEnableLocationServiceTracking">Enable Location Services</string>
    <string name="textDontAllowTracking">Do not Allow</string>
    <string name="textFetchJob">Fetching Jobs</string>
    <string name="textSaving">Saving</string>
    <string name="textPleaseWaitLable">Please Wait</string>
    <string name="textFetchingLocation">Fetching Location</string>
    <string name="titleBrowserSelection">Open With</string>
    <string name="msg_error">Error occurred</string>
    <string name="chargement">Loading</string>
    <string name="dialogInfoPleaseSelectBothDates">Select Both dates</string>
    <string name="exist">Exist</string>
    <string name="notExist">Not exist</string>
    <string name="textSavingAddJobData">Adding the Job</string>
    <string name="textNoneLable">None</string>
    <string name="sorryLable">Sorry</string>
    <string name="locationNotAvaliableLable">Location Not Available</string>
    <string name="textSiteListingLable">Site List</string>
    <string name="textEquipmentListingLable">Equipment List</string>
    <string name="addJobLable">Add Job</string>
    <string name="textJobEmailLableTv">Email</string>
    <string name="textNearestSitesNewJob">Nearby Sites</string>
    <string name="textDuplicateLableTv">Duplicate Job</string>
    <string name="textCustomerNameLable">Customer Name</string>
    <string name="textTechnicianNameLable">Technician Name</string>
    <string name="textCommentLableTv">Comments</string>
    <string name="msg_date">Enter date first for scheduling a job</string>
    <string name="msg_meeting_date">Enter meeting date first for scheduling a job</string>
    <string name="msg_endtime">Enter start time first for scheduling a job</string>
    <string name="msg_endDate">Enter date End for scheduling a job</string>
    <string name="textNoJobCreate">You can not create job for the day</string>
    <string name="textPleaseSelectDays">Select atleast one day</string>
    <string name="textPleaseEnterPreodicity">Enter a valid periodicity</string>
    <string name="textPleaseEnterFrequency">Enter a valid frequency</string>
    <string name="textPleaseEnterCorrectValue">Enter the correct value.</string>
    <string name="textEnableGoogleMap">Enable Google Map</string>
    <string name="textEnableGoogleMapText">Synchroteam Would like to Access Google Maps App please enable it</string>
    <string name="txtNoAttachment">No attachments added</string>
    <string name="txt_close">Close</string>
    <string name="txt_confirm">Confirm</string>
    <string name="txt_push_sync">Push Sync</string>
    <string name="txt_auto_sync">Auto Sync</string>
    <string name="textPushAutosync">Enable</string>
    <string name="txt_discount_option_label">Discount Option</string>
    <string name="txt_ext_amt_lbl">Exact amount</string>
    <string name="txt_perc_lbl">Percentage</string>
    <string name="txt_lbl_global">Add Global Discount</string>
</resources>